--- a/Site.Master
+++ b/Site.Master
@@ -42,22 +42,19 @@
         <div class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
-                    <%--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
-                    </button>--%>
+                    </button>
                     <a class="navbar-brand" runat="server" href="~/">Strava Morés    <%: DateTime.Now.Date.ToShortDateString() %></a>
                 </div>
-              <%--  <div class="navbar-collapse collapse">
+                <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/">Club</a></li>
-                        <li><a runat="server" href="~/">Miembros</a></li>
-                        <li><a runat="server" href="~/">Resumen Semanal</a></li>
-                        <li><a runat="server" href="~/">Resumen Mensual</a></li>
-                        <li><a runat="server" href="~/About">Acerca de</a></li>
-                        <li><a runat="server" href="~/Contact">Contacto</a></li>
+                        <li><a runat="server" href="~/ClubInfo.aspx">Club</a></li>
+                        <li><a runat="server" href="~/Default.aspx">Estadísticas</a></li>
                     </ul>
+                    </div>
            <%--         <asp:LoginView runat="server" ViewStateMode="Disabled">
                         <AnonymousTemplate>
                             <ul class="nav navbar-nav navbar-right">
@@ -77,6 +74,7 @@
                <%-- </div>--%>
             </div>
         </div>
+        
         <div class="container body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
