--- a/Site.Master
+++ b/Site.Master
@@ -15,6 +15,8 @@
     <webopt:bundlereference runat="server" path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
+  
+
 </head>
 <body>
     <form runat="server">
@@ -39,6 +41,7 @@
             </Scripts>
         </asp:ScriptManager>
 
+
         <div class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
@@ -47,8 +50,9 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">Strava Morés    <%: DateTime.Now.Date.ToShortDateString() %></a>
+                    <asp:Image ID="imgStr" runat="server" Width="50" Height="50" ImageUrl="~/images/strava.png"   />&nbsp;&nbsp;<span class="label">Strava Morés</span>
                 </div>
+               
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/ClubInfo.aspx">Club</a></li>
