--- a/Site.Master
+++ b/Site.Master
@@ -15,10 +15,31 @@
     <webopt:bundlereference runat="server" path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
-  
+      <style>
+                .loader {
+                position: fixed;
+                left: 0px;
+                top: 0px;
+                width: 100%;
+                height: 100%;
+                z-index: 9999; visibility:hidden;
+                background: url('images/loading.gif') 50% 50% no-repeat rgb(249,249,249);
+                }
+            </style>
+
+            <script type="text/javascript">
+                function Loading()
+                {
+                    debugger;
+                    $(".loader").css("visibility", "visible");
+                     $(".loader").show();
+   
+                }
+        </script>
 
 </head>
 <body>
+    <div class="loader" ></div>
     <form runat="server">
         <asp:ScriptManager runat="server">
             <Scripts>
@@ -55,8 +76,8 @@
                
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/ClubInfo.aspx">Club</a></li>
-                        <li><a runat="server" href="~/Default.aspx">Estadísticas</a></li>
+                        <li><a runat="server" href="~/ClubInfo.aspx" onclick="Loading();">Club</a></li>
+                        <li><a runat="server" href="~/Default.aspx"  onclick="Loading();">Estadísticas</a></li>
                     </ul>
                     </div>
            <%--         <asp:LoginView runat="server" ViewStateMode="Disabled">
